--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,25 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 16px;
+}
+
+@media (max-width: 768px) {
+  * {
+    font-size: 12px;
+  }
+}
+
+.myDataTable {
+  width: 100%;
+  table-layout: fixed;
+  overflow-wrap: break-word;
+  text-wrap: wrap;
+}
+
