--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -7,9 +7,9 @@
   justify-content: center;
   align-items: center;
   height: calc(100% - 40px);
-//   padding-top: 50px;
+  //   padding-top: 50px;
   overflow-y: auto;
-//   background-color: aquamarine;
+  //   background-color: aquamarine;
 
   img {
     height: 124px;
@@ -57,3 +57,30 @@
   }
 }
 
+.AppHeader {
+  color: lightgray;
+  margin: 0;
+  padding: 0;
+  .cardtitle {
+    text-transform: uppercase;
+    font-size: 16px;
+    font-weight: bold;
+    margin: 0;
+    padding: 0;
+
+    span {
+      text-transform: none;
+      font-size: 16px;
+      font-style: italic;
+      color: #cd2009;
+      margin: 0 0 0 15px;
+      padding: 0;
+    }
+
+    @media (max-width: 768px) {
+      span {
+        display: none;
+      }
+    }
+  }
+}
