--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -97,6 +97,29 @@
 
 //===
 
+.btnFormulaireReset,
+.btnFormulaireReset:hover {
+  background-color: #00407d;
+  color: #fff;
+  border-color: #00407d;
+}
+
+.btnFormulaireSave,
+.btnFormulaireSave:hover {
+  background-color: #970000;
+  color: #fff;
+  border-color: #970000;
+}
+
+.btnFormulaireSubmit,
+.btnFormulaireSubmit:hover {
+  background-color: #056409;
+  color: #fff;
+  border-color: #056409;
+}
+
+// ===
+
 // Media
 
 @media (max-width: 768px) {
@@ -119,6 +142,18 @@
     .app-home-connexion {
       text-align: justify;
       font-size: 12px;
+    }
+  }
+
+  .formulaireButtons {
+    display: flex;
+    justify-content: center;
+    .btnFormulaireReset,
+    .btnFormulaireSave,
+    .btnFormulaireSubmit {
+      span {
+        display: none;
+      }
     }
   }
 }
