--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -1,5 +1,5 @@
 // Here you can add other styles
-.defaultLayout-main-container,
+/*.defaultLayout-main-container,
 .home-main-container {
   background-image: url('../assets/images/background.jpg');
   background-size: cover;
@@ -161,4 +161,4 @@
       }
     }
   }
-}
+}*/
